[gd_scene load_steps=8 format=3 uid="uid://t428mw4jpmqx"]

[ext_resource type="Script" uid="uid://ds5uenpvgnrgx" path="res://courses/course.gd" id="1_r2jf2"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="2_e3463"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_ihg6i"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_3ogki"]

[sub_resource type="Resource" id="Resource_3ogki"]
script = ExtResource("3_3ogki")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3vvmj"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_oiww5"]

[node name="BaseCourse" type="Node2D"]
script = ExtResource("1_r2jf2")

[node name="PhantomCamera2D" type="Node2D" parent="."]
top_level = true
script = ExtResource("2_e3463")
follow_mode = 5
tween_resource = SubResource("Resource_3ogki")
limit_left = 0
limit_right = 1000
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="RacingCamera" type="Camera2D" parent="."]
limit_left = 0
limit_right = 1000

[node name="PhantomCameraHost" type="Node" parent="RacingCamera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_ihg6i")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="RacerStart" type="Node2D" parent="."]

[node name="Finish" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finish"]
shape = SubResource("WorldBoundaryShape2D_3vvmj")

[node name="KillPlane" type="Area2D" parent="."]
position = Vector2(0, 372)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
shape = SubResource("WorldBoundaryShape2D_oiww5")
